--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ See https://help.github.com/articles/ignoring-files for more about ignoring file
 
 # Ignore zip files
 *.zip
+
+# Ignore data files
+report.csv
+AAHSL final list.txt
+SS title list*
+UCLID title list*
+master index*
