update title differences

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ AAHSL final list.txt
 SS title list*
 UCLID title list*
 master index*
+UCLID parsed.txt
+UCLID_combined.txt
+UCLID_combined_fixed.txt
+sql/*.txt
+data/*
